# DL_based_gender_classifier

./: .gitignore  README.md  pyproject.toml
data/: data_unzip.py
debiased_classifier/code/: dataset.py  model.py  retrieval.ipynb  test.py  train.py
debiased_classifier/code/config/: test.json  train.json
debiased_classifier/code/utilities/: utils.py
debiased_classifier/data/: data_unzip_split.py
debiased_classifier/data/csvs/: Tiny_Portraits_Attributes.csv  Tiny_Portraits_Attributes_Test.csv  Tiny_Portraits_Attributes_Train.csv
gender_classification/code/: model.py
gender_classification/data/: data_analysis.ipynb
tests/: test_model.py
