[tool.poetry]
name = "gender-classifier"
version = "0.1.0"
description = ""
authors = ["Nimisha Thekke Madam <nimisha.thekke@onfido.com>"]
readme = "README.md"
packages = [{include = "code"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.2"
notebook = "^7.0.1"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
tensorboard = "^2.13.0"
h5py = "^3.9.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
